Adding comments throughout and setting Kanagawa theme and settings

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,39 +5,73 @@
 # Keybindings
 #############
 
-# vim-like pane resizing  
+# Enable Vim keys in inspect mode.
+set-window-option -g mode-keys vi
+
+# Override default pane resizing keybindings to Vim-esque keybindings.
 bind -r C-k resize-pane -U
 bind -r C-j resize-pane -D
 bind -r C-h resize-pane -L
 bind -r C-l resize-pane -R
 
-# vim-like pane switching
-bind -r k select-pane -U 
-bind -r j select-pane -D 
-bind -r h select-pane -L 
-bind -r l select-pane -R 
-
-# Unbind default keys
-unbind Up     
-unbind Down   
-unbind Left   
-unbind Right  
-
-unbind C-Up   
-unbind C-Down 
-unbind C-Left 
+unbind C-Up
+unbind C-Down
+unbind C-Left
 unbind C-Right
 
+# Override default directional keys to Vim keybindings.
+bind -r k select-pane -U
+bind -r j select-pane -D
+bind -r h select-pane -L
+bind -r l select-pane -R
+
+# Unbind the directional keys now that they're replaced by Vim keybindings.
+unbind Up
+unbind Down
+unbind Left
+unbind Right
+
+# Remap copy-pasting in copy mode to match Vim.
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+
+# Bind `<PREFIX> + P` to paste from clipboard.
+bind P paste-buffer
+
+# Enable copying to clipboard via mouse highlight selection.
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
 
 #########
 # Plugins
 #########
 
+# TMUX plugin manager.
 set -g @plugin "tmux-plugins/tpm"
+# Load sensible TMUX settings.
 set -g @plugin "tmux-plugins/tmux-sensible"
-set -g @plugin "arcticicestudio/nord-tmux"
 
+# Kanagawa colorscheme
+set -g @plugin 'Nybkox/tmux-kanagawa'
+## Enable high contrast pane border.
+set -g @kanagawa-border-contrast true
+## Remove the padding from the leftmost section.
+set -g @kanagawa-left-icon-padding 0
+## Configure the plugins displayed on the far right side.
+set -g @kanagawa-plugins "cpu-usage ram-usage"
+## Set the leftmost section to display the current session's name.
+set -g @kanagawa-show-left-icon session
+## Set the left-hand side separator.
+set -g @kanagawa-show-left-sep 
+## Enable Powerline symbols
+set -g @kanagawa-show-powerline true
+## Set the right-hand side separator.
+set -g @kanagawa-show-right-sep 
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf).
+# Kanagawa plugin color configuration.
+## Set the CPU usage plugin to a light purple background and white foreground.
+set -g @kanagawa-cpu-usage-colors "light_purple white"
+## Set the RAM usage plugin to a dark purple background and white foreground.
+set -g @kanagawa-ram-usage-colors "dark_purple white"
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of `tmux.conf`).
 run "~/.tmux/plugins/tpm/tpm"
-
